# ciao

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  pyproject.toml  sync-with-template.sh
.gitlab/ci/: lint.yml  sync.yml  test.yml
ciao/: __init__.py  __main__.py  typing.py
ciao/algorithm/: __init__.py  beam_search_precomputed.py  bitmask_graph.py  builder.py  context.py  graph.py  lookahead.py  lookahead_bitset.py  mcgs.py  mcts.py  nodes.py  potential.py  pure_monte_carlo.py  search_helpers.py
ciao/baselines/: _cli.py
ciao/baselines/extremal/: __main__.py  explainer.py  perturbation.py
ciao/baselines/lime/: __main__.py  explainer.py
ciao/data/: __init__.py  constants.py  loader.py  preprocessing.py  replacement.py  segmentation.py
ciao/explainer/: __init__.py  ciao_explainer.py  explanation_methods.py  methods.py  strategies.py
ciao/model/: __init__.py  classes.py  predictor.py
ciao/scoring/: __init__.py  hyperpixel.py  region.py  segments.py
ciao/structures/: __init__.py  bitmask_graph.py  nodes.py
ciao/utils/: __init__.py  calculations.py  search_utils.py  segmentation.py
ciao/visualization/: __init__.py  visualization.py
configs/: base.yaml  ep_base.yaml  lime_base.yaml
configs/classes/: imagenet.yaml
configs/data/: directory_batch.yaml  single_image.yaml
configs/logger/: mlflow.yaml
configs/method/: beam_search.yaml  lookahead.yaml  mcgs.yaml  mcts.yaml  potential.yaml  pure_monte_carlo.yaml
configs/metric/: pure_score.yaml
configs/model/: resnet50.yaml
configs/replacement/: blur.yaml  imagenet_mean.yaml  interlacing.yaml  mean_color.yaml  solid_color.yaml
configs/runs/: batch_example.yaml  exp_efficiency.yaml
configs/segmentation/: hexagonal.yaml  slic.yaml  square.yaml
